Opened 8 years ago
Closed 8 years ago
#12944 closed bug (fixed)
[Debugger] can't load sources for 'make'
Reported by: | korli | Owned by: | anevilyak |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta1 |
Component: | Applications/Debugger | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
hrev50481 x86_64
I built grep-2.24 and make-4.1 with porter, installed both locally with sources.
Debugger grep
lets me locate the grep.c source file successfully, while Debugger make
lets me locate the main.c source file but fails to load it.
Change History (2)
comment:1 by , 8 years ago
Milestone: | Unscheduled → R1/beta1 |
---|---|
Status: | new → in-progress |
comment:2 by , 8 years ago
Resolution: | → fixed |
---|---|
Status: | in-progress → closed |
Should be fixed in hrev50529.
Note:
See TracTickets
for help on using tickets.
Confirmed that I can reproduce this, will try to analyze it further this week as time permits.